--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --ext .ts,.tsx ./src",
+    "prettier": "prettier \"**/*.{json,ts,tsx}\"",
+    "format:check": "npm run prettier -- --check",
+    "format:fix": "npm run prettier -- --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -18,6 +22,8 @@
     "@types/react": "18.3.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "typescript": "5.4.5"
   }
 }
