--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prettier": "prettier \"**/*.{json,ts,tsx}\"",
     "format:check": "npm run prettier -- --check",
     "format:fix": "npm run prettier -- --write",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "14.2.3",
