--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format:fix": "npm run prettier -- --write",
     "prepare": "husky",
     "types:check": "tsc --noEmit"
-
   },
   "dependencies": {
     "next": "14.2.3",
@@ -26,6 +25,7 @@
     "eslint-config-next": "14.2.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
+    "prettier": "^3.2.5",
     "typescript": "5.4.5"
   }
 }
